feat: add header block and styles for it

--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My CV</title>
+    <title>RSSchool CV</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Madiyar Yerezhep</h1>
+    <div class="wrapper">
+        <header class="header">
+            <div class="column">
+                <div class="header-avatar">
+                    <img src="img/avatar2.jpg" class="avatar" alt="avatar">
+                </div>
+            </div>
+            <div class="column-main">
+                <h1 class="header-heading">Madiyar Yerezhep</h1>
+                <h3 class="header-heading-h3">Frontend Developer<br> <span>Junior/Trainee</span></h3>
+                <p class="about-me">I am a future front-end developer. I am currently studying on a course from The Rolling Scopes School. So far, I know how to make up not complex site layouts. I hope I make it to the end of the course and become a good specialist.</p>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
