feat: add block section contacts

--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
                 <p class="about-me">I am a future front-end developer. I am currently studying on a course from The Rolling Scopes School. So far, I know how to make up not complex site layouts. I hope I make it to the end of the course and become a good specialist.</p>
             </div>
         </header>
+        <main class="main">
+            <div class="column">
+                <section class="section-contacts">
+                    <h2 class="universal-h2">Contacts</h2>
+                    <ul class="contacts-list">
+                        <li>Location<br> <span>Kazakhstan, Almaty</span></li>
+                        <li>E-mail<br> <span>madimadiar96@gmail.com</span></li>
+                        <li>Telegram<br> <span>@dzhdpn</span></li>
+                        <li>Discord<br> <span>madiyar#9235</span></li>
+                    </ul>
+                </section>
+            </div>
+            <div class="column-main">
+
+            </div>
+        </main>
     </div>
 </body>
 </html>
