--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
                         <li>Discord<br> <span>madiyar#9235</span></li>
                     </ul>
                 </section>
+                <section class="section-slills">
+                    <h2 class="universal-h2">Skills</h2>
+                    <ul class="skills-list">
+                        <li>HTML</li>
+                        <li>CSS/SASS/SCSS</li>
+                        <li>JavaScript(Basics)</li>
+                        <li>Git/GitHub</li>
+                    </ul>
+                </section>
+                <section class="section-lang">
+                    <h2 class="universal-h2">Languages</h2>
+                    <ul class="lang-list">
+                        <li>Russian</li>
+                        <li>Kazakh</li>
+                        <li>English (A1)</li>
+                    </ul>
+                </section>
             </div>
             <div class="column-main">
 
