feat: add block section-edu and styles

--- a/index.html
+++ b/index.html
@@ -51,7 +51,23 @@
                 </section>
             </div>
             <div class="column-main">
-
+                <section class="section-edu">
+                    <h2 class="universal-h2">Education</h2>
+                    <ul class="edu-list">
+                        <li>International College of Business and Communication, Almaty city
+                            <ul class="edu-list-child">
+                                <li>Information Systems</li>
+                            </ul>
+                        </li>
+                        <li>Udemy
+                            <ul class="edu-list-child">
+                                <li><a href="https://www.udemy.com/course/webdeveloper/">WEB-developer(HTML/CSS/SASS/SCSS)</a></li>
+                                <li><a href="https://www.udemy.com/course/javascript_full/">JavaScript(Basics)</a></li>
+                                <li><a href="https://www.udemy.com/course/bestpython/">Python(Basics)</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </section>
             </div>
         </main>
     </div>
