feat: add block section-code and styles

--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
                         </li>
                     </ul>
                 </section>
+                <section class="section-code">
+                    <h2 class="universal-h2">Code exemple</h2>
+                    <pre><code class="language-javascript">
+function multiply(a, b){
+    return a * b;
+}
+
+let result = multiply(2, 5);
+console.log(result);
+                    </code></pre>
+                </section>
             </div>
         </main>
     </div>
