--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>RSSchool CV</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="prism.css">
 </head>
 <body>
     <div class="wrapper">
@@ -83,5 +84,7 @@ console.log(result);
             </div>
         </main>
     </div>
+
+    <script src="prism.js"></script>
 </body>
 </html>
