feat: add footer and styles

--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@ console.log(result);
                 </section>
             </div>
         </main>
+        <footer class="footer">
+            <a href="https://github.com/madiyar-yp">
+                <img src="img/icons/github-icon.png" class="footer-github-icon" alt="github">
+                <p>Visit my GitHub</p>
+            </a>
+            <p>2022</p>
+            <a href="https://rs.school/js/">
+                <img src="img/icons/rsschool.svg" class="footer-rss-icon" alt="RSSchool">
+            </a>
+        </footer>
     </div>
 
     <script src="prism.js"></script>
